infra/core/rbmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rbmq
  labels:
    app: rbmq
spec:
  type: ClusterIP
  ports:
    - name: worker
      port: 5672
      targetPort: 5672
    - name: graph
      port: 15672
      targetPort: 15672
  selector:
    app: rbmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbmq
  labels:
    app: rbmq
spec:
  selector:
    matchLabels:
      app: rbmq
  template:
    metadata:
      labels:
        app: rbmq
    spec:
      containers:
        - image: rbmq:management-alpine
          name: rbmq
