infra/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akb-ingress
spec:
  tls:
  - hosts:
    - akingbee.com
    - www.akingbee.com
    - grafana.akingbee.com
    - cerbes.akingbee.com
    - aristaeus.akingbee.com
    secretName: akingbee.com-tls

  defaultBackend:
    service:
      name: poseidon
      port:
        number: 9000

  rules:
  - host: akingbee.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poseidon
            port:
              number: 9000

  - host: cerbes.akingbee.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cerbes
            port:
              number: 9001

  - host: aristaeus.akingbee.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aristaeus
            port:
              number: 9002

  - host: grafana.akingbee.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
